--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <h1>Hello, world!</h1>
-      <p>Live Preview is awesome!</p>
+      <meta charset="utf-8">
+      <title>Заголовок страницы</title>
    </body>
 </html>
