--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-   <body>
+   <head>
       <meta charset="utf-8">
-      <title>Заголовок страницы</title>
-   </body>
+      <title>Резюме</title>
+   </head>
+   <body>
+      <h1>Пётр I</h1>
+      <img src="C:\bt\Site\img\Petr.jpg">
+      <h2>Работа</h2>
+      <ol>
+         <li>Царевич</li>
+         <li>Государь</li>
+         <li>Император Всероссийский</li>
+      </ol>   
+      <h2>Интересы</h2>
+      <ul>
+         <li>Рубление окон в Европу</li>
+         <li>Ркбление бород</li>
+      </ul>
+      <h2>Цитата</h2>
+      <p1>Все люди - лжецы и лицимеры.</p1>   
+   </body> 
 </html>
