--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
       <title>Резюме</title>
    </head>
    <body>
-      <h1>Пётр I</h1>
+      <h1>Пётр I</h1 >
       <img src="C:\bt\Site\img\Petr.jpg">
       <h2>Работа</h2>
       <ol>
-         <li>Царевич</li>
-         <li>Государь</li>
-         <li>Император Всероссийский</li>
+         <li>Царевич. 1672-1682</li>
+         <li>Государь Царь и Великий Князь всея Руси. 1682-1721</li>
+         <li>Император Всероссийский. 1721-1725</li>
       </ol>   
       <h2>Интересы</h2>
       <ul>
          <li>Рубление окон в Европу</li>
-         <li>Ркбление бород</li>
+         <li>Рубление бород</li>
       </ul>
       <h2>Цитата</h2>
       <p1>Все люди - лжецы и лицимеры.</p1>   
