--- a/index.html
+++ b/index.html
@@ -2,23 +2,41 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>Резюме</title>
+      <title>Каталог сайтов</title>
    </head>
-   <body>
-      <h1>Пётр I</h1 >
-      <img src="C:\bt\Site\img\Petr.jpg">
-      <h2>Работа</h2>
-      <ol>
-         <li>Царевич. 1672-1682</li>
-         <li>Государь Царь и Великий Князь всея Руси. 1682-1721</li>
-         <li>Император Всероссийский. 1721-1725</li>
-      </ol>   
-      <h2>Интересы</h2>
-      <ul>
-         <li>Рубление окон в Европу</li>
-         <li>Рубление бород</li>
-      </ul>
-      <h2>Цитата</h2>
-      <p1>Все люди - лжецы и лицимеры.</p1>   
+   <body> 
+      <table>
+         <tr>
+
+            <td></td>
+
+            <td>     
+      <a href="http://1c.ru">
+         <img src="img\Logo1C.jpg">
+      </a>
+         </td>
+
+             <td></td>
+
+         </tr>
+
+         <tr>
+
+            <td>
+         <a href="http://google.com">
+         <img src="img\4.jpg">
+         </a>
+            </td>
+
+            <td></td>
+
+            <td>
+         <a href="http://yandex.ru">
+         <img src="img\yabdex.jpg">
+         </a>
+            </td>
+
+               </tr>
+      </table
    </body> 
 </html>
